--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,20 @@
 [package]
-name = "{{project-name}}"
+name = "smth_control"
 edition = "2021"
 license = "MIT/Apache-2.0"
 readme = "README.md"
-version = "0.0.0"
+version = "0.0.1"
 
 [dependencies]
 cortex-m-rtic = "1.1.3"
 defmt = "0.3.2"
 defmt-rtt = "0.4.0"
 panic-halt = "0.2.0"
-stm32g0xx-hal = { version = "0.2.0", features = ["rt", "stm32g030"] }
+
+[dependencies.stm32c0xx-hal]
+git = "https://github.com/stm32-rs/stm32c0xx-hal"
+version = "0.0.0"
+features = ["rt", "stm32c031"]
 
 [profile.dev]
 incremental = false
