--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,8 +1,8 @@
 source [find interface/stlink.cfg]
-source [find target/stm32g0x.cfg]
+source [find target/stm32c0x.cfg]
 
 reset halt
-stm32g0x unlock 0
+stm32c0x unlock 0
 reset halt
 
 reset_config srst_only srst_nogate
